production/vaultwarden/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - key.clusters.zjusct.io
    - key.s.zjusct.io
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 8080
